@@ -58,11 +58,11 @@ __miscellanea__
 miscellanea/submission-resources
 miscellanea/fwts_test
 miscellanea/fwts_results.log
-__networking__
-networking/detect
-networking/http
-networking/internet
-networking/ping
+__ethernet__
+ethernet/detect
+ethernet/http
+ethernet/internet
+ethernet/ping
 __power-management__
 power-management/tickless_idle
 power-management/rtc
