@@ -110,9 +110,9 @@ __monitor__
 monitor/hdmi
 monitor/vga
 monitor/powersaving
-__networking__
-networking/detect
-networking/internet
+__ethernet__
+ethernet/detect
+ethernet/internet
 __wireless__
 wireless/wireless_connection
 __optical__
