@@ -66,11 +66,11 @@ mediacard/sd-preinserted
 __memory__
 memory/info
 memory/check
-__networking__
-networking/detect
-networking/http
-networking/internet
-networking/ping
+__ethernet__
+ethernet/detect
+ethernet/http
+ethernet/internet
+ethernet/ping
 __power-management__
 power-management/tickless_idle
 power-management/rtc
