@@ -26,7 +26,7 @@ qt/checkbox-qt.desktop.in
 [type: gettext/rfc822deb] jobs/miscellanea.txt.in
 [type: gettext/rfc822deb] jobs/mobilebroadband.txt.in
 [type: gettext/rfc822deb] jobs/monitor.txt.in
-[type: gettext/rfc822deb] jobs/networking.txt.in
+[type: gettext/rfc822deb] jobs/ethernet.txt.in
 [type: gettext/rfc822deb] jobs/optical.txt.in
 [type: gettext/rfc822deb] jobs/panel_clock_test.txt.in
 [type: gettext/rfc822deb] jobs/panel_reboot.txt.in
