@@ -92,7 +92,7 @@ QtFront::QtFront(QApplication *parent) :
     m_titleTestTypes["__memory__"] = checkboxTr("Memory Test", 0);
     m_titleTestTypes["__miscellanea__"] = checkboxTr("Miscellanea Test", 0);
     m_titleTestTypes["__monitor__"] = checkboxTr("Monitor Test", 0);
-    m_titleTestTypes["__networking__"] = checkboxTr("Networking Test", 0);
+    m_titleTestTypes["__ethernet__"] = checkboxTr("Ethernet Device Test", 0);
     m_titleTestTypes["__wireless__"] = checkboxTr("Wireless Test", 0);
     m_titleTestTypes["__optical__"] = checkboxTr("Optical Test", 0);
     m_titleTestTypes["__expresscard__"] = checkboxTr("ExpressCard Test", 0);
