@@ -33,7 +33,7 @@ rfc822deb_files=[
          "jobs/miscellanea.txt.in",
          "jobs/mobilebroadband.txt.in",
          "jobs/monitor.txt.in",
-         "jobs/networking.txt.in",
+         "jobs/ethernet.txt.in",
          "jobs/optical.txt.in",
          "jobs/panel_clock_test.txt.in",
          "jobs/panel_reboot.txt.in",
