@@ -47,7 +47,11 @@ checkbox (0.16.13) UNRELEASED; urgency=low
     server-services.txt.in: Fixed "requires" expresions using the "and" 
     operator.
 
- -- Taihsiang Ho <taihsiang.ho@canonical.com>  Thu, 17 Oct 2013 12:34:41 -0400
+  [ Jeff Lane ]
+  * Renamed networking.txt.in to ethernet.txt.in. Renamed all jobs and
+    references to jobs with 'networking' in them to 'ethernet'
+
+ -- Taihsiang Ho <taihsiang.ho@canonical.com>  Mon, 14 Oct 2013 17:35:23 -0400
 
 checkbox (0.16.12) saucy; urgency=low
 
